--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -13,6 +13,8 @@
 <p>
   <strong>Dob:</strong>
   <%= @candidate.dob %>
+  <strong>Age:</strong>
+  <%= @candidate.age =%>
 </p>
 
 <p>
@@ -26,12 +28,12 @@
 </p>
 
 <p>
-  <strong>Phone num:</strong>
+  <strong>Phone number:</strong>
   <%= @candidate.phone_num %>
 </p>
 
 <p>
-  <strong>Can email:</strong>
+  <strong>Email:</strong>
   <%= @candidate.can_email %>
 </p>
 
@@ -46,7 +48,7 @@
 </p>
 
 <p>
-  <strong>Can password:</strong>
+  <strong>Password:</strong>
   <%= @candidate.password_digest %>
 </p>
 
