--- a/app/views/employers/show.html.erb
+++ b/app/views/employers/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Emp password:</strong>
-  <%= @employer.emp_password %>
+  <%= @employer.password_digest %>
 </p>
 
 <%= link_to 'Edit', edit_employer_path(@employer) %> |
