--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,12 +10,19 @@ h2 {
     text-align: center;
 }
 
+image_tag{
+       text-align: center;
+}
+
+
+
 </style>
 </head>
 <body>
 
 <h1>EmployMe.com</h1>
-<h2>Part time jobs for full time students!</h2>
+<h2>Part time jobs for full time students, Sign up and search through jobs in the database!</h2>
 
-
+<center><%= image_tag("helpwanted4.png", :size=>"1200x400") %></center>
+<h3> Creator: Charlie Mullen </h3> <h3><%=link_to "Click me for Github", 'https://github.com/charliepjmullen/student'%></h3>
 </html>
