--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -1,28 +1,20 @@
-<style>
-h1 {
-    text-align: center;
-}
-
-</style>
-
-
-<h1>Listing employers</h1>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-
-
-<div class="w3-container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Employers</title>
   
+</head>
+<body>
 
-<table class="w3-table-all w3-small">
+
+<div class="container">
+<h2> Employers </h2>  
+<table class = "table table-hover">
   <thead>
-    <tr class="w3-blue ">
+    <tr>
       <th>Name</th>
       <th>Location</th>
       <th>Sector</th>
-      <th>email</th>
-      <th>password</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -33,11 +25,9 @@ h1 {
         <td><%= employer.emp_name %></td>
         <td><%= employer.location %></td>
         <td><%= employer.emp_sector %></td>
-        <td><%= employer.emp_email %></td>
-        <td><%= employer.password_digest %></td>
-        <td><%= link_to 'Show', employer %></td>
-        <td><%= link_to 'Edit', edit_employer_path(employer) %></td>
-        <td><%= link_to 'Destroy', employer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', employer, class:'btn btn-mini btn-success'%></td>
+        <td><%= link_to 'Edit', edit_employer_path(employer), class:'btn btn-mini btn-danger' %></td>
+        <td><%= link_to 'Destroy', employer, method: :delete, class:'btn btn-mini', data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
