--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,28 +1,20 @@
-<style>
-h1 {
-    text-align: center;
-}
-
-</style>
-
-
-<h1>Listing jobs</h1>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Jobs</title>
+</head>
+<body>
 
 
-<div class="w3-container">
+<div class="container">
   
-
-<table class="w3-table-all w3-small">
+<h2>Jobs</h2>
+<table class = "table table-hover">
   <thead>
-    <tr class="w3-blue">
-      <th>Name</th>
+    <tr>
+      <th>Job Title</th>
       <th>Employer</th>
       <th>Sector</th>
-      <th>Experience req</th>
-      <th>Job Info</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -33,11 +25,9 @@ h1 {
         <td><%= job.name %></td>
         <td><%= job.employer %></td>
         <td><%= job.sector_id %></td>
-        <td><%= job.experience_req %></td>
-        <td><%= job.job_info %></td>
-        <td><%= link_to 'Show', job %></td>
-        <td><%= link_to 'Edit', edit_job_path(job) %></td>
-        <td><%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', job, class:'btn btn-mini btn-success'  %></td>
+        <td><%= link_to 'Edit', edit_job_path(job), class:'btn btn-mini btn-danger' %></td>
+        <td><%= link_to 'Destroy', job, method: :delete, class:'btn btn-mini', data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
