--- a/app/views/sectors/index.html.erb
+++ b/app/views/sectors/index.html.erb
@@ -1,42 +1,34 @@
-<style>
-h1 {
-    text-align: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Sectors</title>
+</head>
+<body>
 
-</style>
+<div class="container">
+	<h2> Sectors </h2>
+	 <table class = "table table-hover">
+	  <thead>
+		<tr>
+		  <th>Sector Name</th>
+		  <th>Num of Jobs</th>
+		  <th colspan="3"></th>
+		</tr>
+	  </thead>
 
+	  <tbody>
+		<% @sectors.each do |sector| %>
+		  <tr>
+			<td><%= sector.sector_name %></td>
+			<td><%= sector.num_of_jobs %></td>
+			<td><%= link_to 'Show', sector, class:'btn btn-mini btn-success' %></td>
+			<td><%= link_to 'Edit', edit_sector_path(sector), class:'btn btn-mini btn-danger' %></td>
+			<td><%= link_to 'Destroy', sector, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-mini' %></td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
 
-<h1>Listing sectors</h1>
+	<br>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-
-
-<div class="w3-container">
-  
-
-<table class="w3-table-all w3-small">
-  <thead>
-    <tr class="w3-blue ">
-      <th>Sector Name</th>
-      <th>Num of Jobs</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @sectors.each do |sector| %>
-      <tr>
-        <td><%= sector.sector_name %></td>
-        <td><%= sector.num_of_jobs %></td>
-        <td><%= link_to 'Show', sector %></td>
-        <td><%= link_to 'Edit', edit_sector_path(sector) %></td>
-        <td><%= link_to 'Destroy', sector, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Sector', new_sector_path %>
+	<%= link_to 'New Sector', new_sector_path %>
