--- a/app/views/employers/_form.html.erb
+++ b/app/views/employers/_form.html.erb
@@ -19,9 +19,10 @@
     <%= f.label :Location %><br>
     <%= f.text_field :location %>
   </div>
+  
   <div class="field">
     <%= f.label :Sector %><br>
-    <%= f.text_field :emp_sector %>
+	<%= f.collection_select :sector_id, Sector.all, :id, :sector_name %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
