--- a/app/views/employers/show.html.erb
+++ b/app/views/employers/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
 <p>
   <strong>Emp name:</strong>
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Emp sector:</strong>
-  <%= @employer.emp_sector %>
+  <%= @employer.sector.sector_name %>
 </p>
 
 <p>
@@ -20,10 +20,13 @@
   <%= @employer.emp_email %>
 </p>
 
-<p>
-  <strong>Emp password:</strong>
-  <%= @employer.password_digest %>
-</p>
+
+
+
+<h3>Where we are</h3>
+
+<%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@employer.latitude}%2C#{@employer.longitude}" %>
+<br>
 
 <%= link_to 'Edit', edit_employer_path(@employer) %> |
 <%= link_to 'Back', employers_path %>
